# opengl-template

./: .gitignore  .gitpod.yml  CMakeLists.md5  CMakeLists.txt  README.md  build.ps1  build.sh
src/: main.cpp
utils/: dependencies.sh
